# EFIFatBinary.hopperLoader

./: .gitmodules  CMakeLists.txt  EFIFatBinaryLoader.mm  README.md
EFIFatBinaryLoader/: CMakeLists.txt  EFIFatBinary.hpp  EFIFatBinaryLoader.mm  HPHopperServicesPatched.h
HopperPatch/: CMakeLists.txt  HopperPatch.m
